[package]
name = "vdesk"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vdesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.58.0", features = [
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_Graphics",
    "Win32_Graphics_Dwm",
] }
windows-result = "0.3.0"
winvd = { version = "0.0.48" }
uuid = { version = "1.16.0", features = ["v4"] }
# winvd = { git = "https://github.com/div02-afk/VirtualDesktopAccessor", branch = "rust" }
